added another page and changed pictures

--- a/mystyle.css
+++ b/mystyle.css
@@ -2,3 +2,19 @@ h1, h2, p {
     text-align: center;
     color: blue;
 }
+
+body {
+	border: 1px solid black;
+	style = "background-color:powderblue; 
+	font-size:300%; 
+	text-align:center;"
+}
+
+	
+.floating img { 
+	float: left; 
+	width:128px;
+	height:128px;
+
+}
+
