--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ h1 {
 #sidebar h1 {
 	font-family:"Trebuchet MS", Arial, Verdana;
 	text-align:right;
-	font-size:200%;
+	font-size:12.5px;
 	color:#626477;
 	border-bottom:1px dashed #eeeeee;
 }
