--- a/main.css
+++ b/main.css
@@ -107,6 +107,7 @@ h1 {
 	background-image:url(images/backgrounds/a.jpg);
 	background-position:right;
 	background-repeat:no-repeat;
+	font-size:12.5px;
 	padding-right:10px;
 	line-height:15px;
 	text-decoration:none;
