--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ br {
 #content h1 {
 	font-family:"Trebuchet MS", Arial, Verdana;
 	text-align:left;
-	font-size:150%;
+	font-size:12.5px;
 	color:#6497b1;
 	border-bottom:1px dashed #eeeeee;
 	padding-top:15px !important;
